grammar.js
    source_file: ($) => repeat(choice($._item, $.implicit_run_end)),

    _item: ($) =>
      choice(
        $.handler_definition,
        $.script_block,
        $.tell_block,
        $.tell_simple_statement,
        $.if_block,
        $.if_simple_statement,
        $.repeat_block,
        $.try_block,
        $.considering_block,
        $.ignoring_block,
        $.timeout_block,
        $.transaction_block,
        $.using_terms_block,
        $.use_statement,
        $.property_declaration,
        $.global_declaration,
        $.local_declaration,
        $.set_statement,
        $.copy_statement,
        $.return_statement,
        $.error_statement,
        $.exit_statement,
        $.continue_statement,
        $.log_statement,
        $.bare_objc_call,
        $.command_call,
        $._expression
      ),

    // Bare ObjC selector call at statement level: `sortList:myList`,
    // `splitString:s byDelim:d`. Distinct from `objc_selector_call` (which
    // requires a `receiver's` prefix) so this form doesn't compete with
    // record-entry syntax inside `{}`. Only valid as a top-level item.
    keyword_end: ($) => token(ci("end")),

    // Forced move: once `piped_identifier` reaches `$._expression`, the
    // header `on greet(name, age)` becomes GLR-ambiguous — `(name, age)`
    // could also parse as a `parenthesized_expression` (or comma-separated
    // expression list) since `name` and `age` are valid expressions. The
    // dynamic precedence resolves in favour of `parameter_list` whenever
    // the surrounding context is a handler header.
    using_terms_block: ($) =>
      prec.right(
        seq(
          field("keyword", $.keyword_using_terms_from),
          field("source", $._expression),
          repeat($._item),
          $.keyword_end,
          optional(token(seq(ci("using"), /[ \t]+/, ci("terms"), /[ \t]+/, ci("from"))))
        )
      ),

    keyword_using_terms_from: ($) => token(seq(ci("using"), /[ \t]+/, ci("terms"), /[ \t]+/, ci("from"))),

    // ==================== USE STATEMENTS ====================

    // Use statement — covers every form documented in the AppleScript
    // Language Guide and macosxautomation.com:
    //   `use AppleScript version "2.4"`
    //   `use scripting additions`
    //   `use framework "Foundation"`
    //   `use application "Finder"`
    //   `use script "MyLibrary"`
    //   `use Safari: application "Safari" version "7.0" without importing`
    // The optional `<alias>:` prefix binds the imported resource to a name;
    // the optional `version "X"` requests a minimum version; the optional
    // `with importing` / `without importing` controls terminology import.
    use_statement: ($) =>
      seq(
        $.keyword_use,
        optional(seq(field("alias", $.identifier), ":")),
        choice(
          seq(token(ci("AppleScript")), optional($.use_version_clause)),
          seq(token(ci("framework")), $.string, optional($.use_version_clause), optional($.use_importing_clause)),
          seq(token(ci("scripting")), token(ci("additions"))),
          seq(token(ci("application")), $.string, optional($.use_version_clause), optional($.use_importing_clause)),
          seq(token(ci("script")), $.string, optional($.use_version_clause), optional($.use_importing_clause))
        )
      ),

    use_version_clause: ($) => seq(token(ci("version")), $.string),

    keyword_use: ($) => token(ci("use")),

    // ==================== DECLARATIONS ====================

    // Property declaration
    set_statement: ($) =>
      seq(
        $.keyword_set,
        field("variable", choice($._expression, $.compound_name)),
        token(ci("to")),
        field("value", choice($._expression, $.command_call))
      ),

    keyword_set: ($) => token(ci("set")),

    // Copy statement
    _expression: ($) =>
      seq(
        optional($.the_keyword),
        choice(
          $.binary_expression,
          $.unary_expression,
          $.string,
          $.number,
          $.boolean,
          $.missing_value,
          $.null_value,
          $.current_application,
          $.current_date,
          $.me_reference,
          $.it_reference,
          $.its_reference,
          $.result_reference,
          $.list,
          $.record,
          $.parenthesized_expression,
          $.reference,
          $.object_specifier,
          $.property_reference,
          $.index_expression,
          $.range_expression,
          $.coercion_expression,
          $.concatenation,
          $.reference_to_expression,
          $.date_literal,
          $.objc_selector_call,
          $.possessive_expression,
          $.new_specifier,
          $.raw_data,
          $.my_expression,
          $.handler_call,
          $.applescript_constant,
          $.relative_reference,
          $.alias_expression,
          // Piped identifiers are first-class expressions, not just name
          // slots — `set X to |class|`, `display dialog |the message|`,
          // etc. The `_name_ref` helper covers the inverse case (name-only
          // slots like parameter lists where expressions would be wrong).
          $.piped_identifier,
          $.identifier
        )
      ),

    // `alias <expr>` — produces an alias value from a path/string expression.
    // The `alias` token is supplied by the external scanner (see scanner.c);
    // it's only emitted when the next non-whitespace input is NOT `of`, so
    // the property-reference form `alias of theItem` keeps parsing as a
    // plain `property_reference(compound_name(alias), theItem)`.
    reference: ($) =>
      seq(
        $.keyword_application,
        $.string
      ),

    keyword_application: ($) => token(ci("application")),

    // ==================== BINARY EXPRESSIONS ====================

    // Binary operators with precedence
    string: ($) =>
      token(
        seq(
          '"',
          repeat(choice(
            seq("\\", /./),
            /[^"\\]/
          )),
          '"'
        )
      ),

    // Retained for `(escape_sequence) @string.escape` highlight queries even
    // though `string` is now a single opaque token in the AST.
    number: ($) =>
      token(
        choice(
          // Ordinal suffix forms: any integer followed by st/nd/rd/th (case
          // insensitive). Listed BEFORE the plain numeric pattern so the
          // longer ordinal token wins via longest-match lexing.
          /-?\d+(st|nd|rd|th|ST|ND|RD|TH)/,
          /-?\d+(\.\d+)?(E[+-]?\d+)?/
        )
      ),

    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // _name_ref: anywhere a plain $.identifier appears as a NAME slot
    // (parameter, property declaration, variable in global/local/error).
    // Piped identifiers ARE expressions, so for slots that already accept
    // $._expression they fall through there; this helper is only for the
    // name-only slots where $._expression would be wrong (e.g. parameter
    // lists, property names — you don't want a string literal there).
