test/corpus/use_statements.txt
================================================================================
Use AppleScript version
================================================================================

use AppleScript version "2.4"

--------------------------------------------------------------------------------

(source_file
  (use_statement
    (keyword_use)
    (use_version_clause
      (string))))

================================================================================
Use scripting additions
================================================================================

use scripting additions

--------------------------------------------------------------------------------

(source_file
  (use_statement
    (keyword_use)))

================================================================================
Use framework
================================================================================

use framework "Foundation"

--------------------------------------------------------------------------------

(source_file
  (use_statement
    (keyword_use)
    (string)))

================================================================================
Use application
================================================================================

use application "Finder"

--------------------------------------------------------------------------------

(source_file
  (use_statement
    (keyword_use)
    (string)))
